@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: Toolkit for Corpus Analysis
-Version: 0.7.3.9002
-Date: 2017-05-28
+Version: 0.7.3.9004
+Date: 2017-05-31
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -51,6 +51,7 @@ Collate:
     'CQI.perl.R'
     'CQI.rcqp.R'
     'Corpus_class.R'
+    'Labels.R'
     'Partition.R'
     'generics.R'
     'textstat_class.R'
